# Automatically-Remove-Silence-From-Video

./: .gitignore  __main__.py  cli.py  pyproject.toml
