[project]
name = "automatically-remove-silence-from-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "auto-editor>=29.3.1",
    "flask>=3.1.3",
    "faster-whisper>=1.0.0",
    "google-generativeai>=0.3.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
local-llm = ["llama-cpp-python>=0.2.0"]
